@@ -1,5 +1,14 @@
 package eu.europeana.indexing.solr;
 
+import static eu.europeana.indexing.solr.EdmLabel.CREATED_DATE;
+import static eu.europeana.indexing.solr.EdmLabel.CREATED_DATE_BEGIN;
+import static eu.europeana.indexing.solr.EdmLabel.CREATED_DATE_END;
+import static eu.europeana.indexing.solr.EdmLabel.ISSUED_DATE;
+import static eu.europeana.indexing.solr.EdmLabel.ISSUED_DATE_BEGIN;
+import static eu.europeana.indexing.solr.EdmLabel.ISSUED_DATE_END;
+import static java.util.Optional.empty;
+import static java.util.Optional.of;
+import static java.util.Optional.ofNullable;
 import static java.util.function.Predicate.not;
 
 import eu.europeana.corelib.definitions.edm.entity.QualityAnnotation;
@@ -24,7 +33,15 @@ import eu.europeana.indexing.solr.property.TimespanSolrCreator;
 import eu.europeana.indexing.utils.RdfWrapper;
 import eu.europeana.indexing.utils.WebResourceLinkType;
 import eu.europeana.indexing.utils.WebResourceWrapper;
+import eu.europeana.metis.schema.jibx.Begin;
+import eu.europeana.metis.schema.jibx.End;
+import eu.europeana.metis.schema.jibx.EuropeanaType.Choice;
+import eu.europeana.metis.schema.jibx.ProxyType;
+import eu.europeana.metis.schema.jibx.ResourceOrLiteralType;
+import eu.europeana.metis.schema.jibx.ResourceOrLiteralType.Resource;
+import eu.europeana.metis.schema.jibx.TimeSpanType;
 import eu.europeana.metis.schema.model.MediaType;
+import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.EnumSet;
@@ -33,6 +50,7 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -62,29 +80,35 @@ public class SolrDocumentPopulator {
     new FullBeanSolrProperties().setProperties(document, fullBean);
 
     // Gather the licenses.
-    final List<LicenseImpl> licenses = Optional.ofNullable(fullBean.getLicenses()).stream()
-                                               .flatMap(List::stream).filter(Objects::nonNull).collect(Collectors.toList());
+    final List<LicenseImpl> licenses = ofNullable(fullBean.getLicenses()).stream()
+                                                                         .flatMap(List::stream).filter(Objects::nonNull)
+                                                                         .toList();
 
     // Gather the quality annotations.
-    final Set<String> acceptableTargets = Optional.ofNullable(fullBean.getAggregations()).stream()
-                                                  .flatMap(Collection::stream).filter(Objects::nonNull)
-                                                  .map(AggregationImpl::getAbout)
-                                                  .filter(Objects::nonNull).collect(Collectors.toSet());
-    final Predicate<QualityAnnotation> hasAcceptableTarget = annotation -> Optional
-        .ofNullable(annotation.getTarget()).stream().flatMap(Arrays::stream)
-        .anyMatch(acceptableTargets::contains);
-    final List<QualityAnnotation> annotationsToAdd = Optional
-        .ofNullable(fullBean.getQualityAnnotations()).map(List::stream).orElseGet(Stream::empty)
-        .filter(Objects::nonNull)
-        .filter(annotation -> StringUtils.isNotBlank(annotation.getBody()))
-        .filter(hasAcceptableTarget)
-        .collect(Collectors.toList());
+    final Set<String> acceptableTargets = ofNullable(fullBean.getAggregations()).stream()
+                                                                                .flatMap(Collection::stream)
+                                                                                .filter(Objects::nonNull)
+                                                                                .map(AggregationImpl::getAbout)
+                                                                                .filter(Objects::nonNull)
+                                                                                .collect(Collectors.toSet());
+    final Predicate<QualityAnnotation> hasAcceptableTarget = annotation -> ofNullable(annotation.getTarget()).stream().flatMap(
+                                                                                                                 Arrays::stream)
+                                                                                                             .anyMatch(
+                                                                                                                 acceptableTargets::contains);
+    final List<QualityAnnotation> annotationsToAdd = ofNullable(fullBean.getQualityAnnotations()).map(List::stream)
+                                                                                                 .orElseGet(Stream::empty)
+                                                                                                 .filter(Objects::nonNull)
+                                                                                                 .filter(
+                                                                                                     annotation -> StringUtils.isNotBlank(
+                                                                                                         annotation.getBody()))
+                                                                                                 .filter(hasAcceptableTarget)
+                                                                                                 .collect(Collectors.toList());
     new QualityAnnotationSolrCreator().addAllToDocument(document, annotationsToAdd);
 
     // Add the containing objects.
-    new ProvidedChoSolrCreator().addToDocument(document, fullBean.getProvidedCHOs().get(0));
+    new ProvidedChoSolrCreator().addToDocument(document, fullBean.getProvidedCHOs().getFirst());
     new AggregationSolrCreator(licenses, fullBean.getOrganizations())
-        .addToDocument(document, getDataProviderAggregations(fullBean).get(0));
+        .addToDocument(document, getDataProviderAggregations(fullBean).getFirst());
     new EuropeanaAggregationSolrCreator(licenses)
         .addToDocument(document, fullBean.getEuropeanaAggregation());
     new ProxySolrCreator().addAllToDocument(document, fullBean.getProxies());
@@ -151,13 +175,67 @@ public class SolrDocumentPopulator {
     }
   }
 
+  /**
+   * Populates Solr document with the date range fields. Please note: this method should only be called once on a * given
+   * document, otherwise the behavior is not defined.
+   *
+   * @param document The document to populate.
+   * @param rdfWrapper The RDF to populate from.
+   */
+  public void populateWithDateRanges(SolrInputDocument document, RdfWrapper rdfWrapper) {
+    populateWithDateRanges(document, rdfWrapper, Choice::ifCreated, Choice::getCreated, CREATED_DATE, CREATED_DATE_BEGIN,
+        CREATED_DATE_END);
+    populateWithDateRanges(document, rdfWrapper, Choice::ifIssued, Choice::getIssued, ISSUED_DATE, ISSUED_DATE_BEGIN,
+        ISSUED_DATE_END);
+  }
+
+  private void populateWithDateRanges(SolrInputDocument document, RdfWrapper rdfWrapper, Predicate<Choice> choiceTypePredicate,
+      Function<Choice, ResourceOrLiteralType> choiceValueGetter, EdmLabel edmLabelDate, EdmLabel edmLabelDateBegin,
+      EdmLabel edmLabelDateEnd) {
+    final List<TimeSpanType> normalizedTimeSpans
+        = rdfWrapper.getTimeSpans().stream().filter(timeSpanType -> timeSpanType.getNotation() != null).toList();
+
+    final ProxyType europeanaProxy = rdfWrapper.getProxies().stream().filter(RdfWrapper::isEuropeanaProxy).findFirst()
+                                               .orElseThrow();
+
+    final List<String> proxyChoiceLinks = europeanaProxy.getChoiceList().stream().filter(choiceTypePredicate)
+                                                        .map(choiceValueGetter).map(ResourceOrLiteralType::getResource)
+                                                        .map(Resource::getResource).toList();
+
+    final List<TimeSpanType> proxyChoiceMatchingTimeSpans = normalizedTimeSpans.stream().filter(
+        timeSpanType -> proxyChoiceLinks.contains(timeSpanType.getAbout())).toList();
+
+    Optional<LocalDate> earliestBegin = empty();
+    Optional<LocalDate> latestEnd = empty();
+    for (TimeSpanType timeSpanType : proxyChoiceMatchingTimeSpans) {
+      final String begin = ofNullable(timeSpanType.getBegin()).map(Begin::getString).orElse(null);
+      final String end = ofNullable(timeSpanType.getEnd()).map(End::getString).orElse(null);
+      // If either 'begin' or 'end' is null, set it to the value of the other
+      final String finalBegin = ofNullable(begin).orElse(end);
+      final String finalEnd = ofNullable(end).orElse(begin);
+      // We only need to check if finalBegin is no-null since if finalBegin is non-null then finalEnd will certainly be non-null
+      if (finalBegin != null) {
+        document.addField(edmLabelDate.toString(), String.format("[%sTO%s]", finalBegin, finalEnd));
+
+        final LocalDate localDateFinalBegin = LocalDate.parse(finalBegin);
+        final LocalDate localDateFinalEnd = LocalDate.parse(finalEnd);
+
+        earliestBegin = earliestBegin.map(earliest -> localDateFinalBegin.isBefore(earliest) ? localDateFinalBegin : earliest)
+                                     .or(() -> of(localDateFinalBegin));
+        latestEnd = latestEnd.map(latest -> localDateFinalEnd.isAfter(latest) ? localDateFinalEnd : latest)
+                             .or(() -> of(localDateFinalEnd));
+      }
+    }
+    earliestBegin.ifPresent(date -> document.addField(edmLabelDateBegin.toString(), date.toString()));
+    latestEnd.ifPresent(date -> document.addField(edmLabelDateEnd.toString(), date.toString()));
+  }
+
   private List<AggregationImpl> getDataProviderAggregations(FullBeanImpl fullBean) {
     List<String> proxyInResult = fullBean.getProxies().stream()
                                          .filter(not(ProxyImpl::isEuropeanaProxy))
                                          .filter(proxy -> ArrayUtils.isEmpty(proxy.getLineage())).map(ProxyImpl::getProxyIn)
-                                         .map(Arrays::asList).flatMap(List::stream).collect(Collectors.toList());
+                                         .map(Arrays::asList).flatMap(List::stream).toList();
 
-    return fullBean.getAggregations().stream().filter(x -> proxyInResult.contains(x.getAbout()))
-                   .collect(Collectors.toList());
+    return fullBean.getAggregations().stream().filter(x -> proxyInResult.contains(x.getAbout())).toList();
   }
 }
